--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-  supabase_flutter:
+  supabase_flutter: ^0.3.3
 
   # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # Use with the Cupert:winoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
