--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   # Use with the Cupert:winoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   date_time_picker: ^2.1.0
+  auth_buttons: ^3.0.0
 
 dev_dependencies:
   flutter_test:
