help requests feed + animated expanding FAB

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   date_time_picker: ^2.1.0
   auth_buttons: ^3.0.0
   gender_picker: ^1.1.0
-  dynamic_color:
+  dynamic_color: ^1.5.4
 
 dev_dependencies:
   flutter_test:
