--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   dynamic_color: ^1.5.4
   flutter_form_builder: ^7.7.0
   form_builder_validators: ^8.3.0
+  animations: ^2.0.7
+
 
 dev_dependencies:
   flutter_test:
