--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   open_location_picker: ^0.1.3
   location: ^4.4.0
   animations: ^2.0.7
+  image_picker: ^0.8.6
+  avatars: ^3.0.2
+  age_calculator: ^1.0.0
+  geocode: 1.0.2
 
 dev_dependencies:
   flutter_test:
