--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   open_location_picker: ^0.1.3
   location: ^4.4.0
   animations: ^2.0.7
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
