improve profile page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   age_calculator: ^1.0.0
   geocode: 1.0.2
   flutter_riverpod: ^2.0.2
+  powers: ^1.0.0+2
 
 dev_dependencies:
   flutter_test:
