--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -41,4 +41,8 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permissions.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permissions.ACCESS_FINE_LOCATION" />
 </manifest>
+
