--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   http: ^0.13.5
   fluttertoast: ^8.0.9
   maps_launcher: ^2.0.1
+  material_segmented_control: ^4.0.0
 
 
 dev_dependencies:
