--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   maps_launcher: ^2.0.1
   material_segmented_control: ^4.0.0
   mailto: ^2.0.0
+  equatable: ^2.0.5
 
 
 dev_dependencies:
