--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   material_segmented_control: ^4.0.0
   mailto: ^2.0.0
   equatable: ^2.0.5
+  yaml: ^3.1.1
 
 
 dev_dependencies:
@@ -87,7 +88,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/loginBGgren.png
+    - assets/
+    - assets/loginBGgren.png
+    - assets/LearnInstructions.yaml
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
