Badges in details

--- a/assets/LearnInstructions.yaml
+++ b/assets/LearnInstructions.yaml
@@ -46,11 +46,11 @@ sections:
           •	Pracownicy•wolontariusze dobrowolnie podejmują różne prace na rzecz potrzebujących, a firma wspiera ich w tych działaniach w ramach swoich możliwości finansowych czy organizacyjnych.
           Wolontariat seniorów
           •	Wolontariat seniorów jest dowodem na to, że wolontariuszem można być w każdym wieku.
-          •	Wolontariusze•seniorzy chętnie angażują swój wolny czas, dzieląc się wiedzą, umiejętnościami i doświadczeniem.
-          e•Wolontariat
+          •	Wolontariusze-seniorzy chętnie angażują swój wolny czas, dzieląc się wiedzą, umiejętnościami i doświadczeniem.
+          • Wolontariat
           •	Szczególnym rodzajem wolontariatu jest wolontariat realizowany wirtualnie, w całości lub częściowo przez Internet.
           •	Wolontariusz w tym przypadku wykonuje swoje zadania zdalnie, z domu czy innego miejsca.
-          •	Przykładowym zadaniem dla e•wolontariusza jest np. pomoc w administrowaniu strony internetowej organizacji pozarządowej lub pisanie tekstów na stronę.
+          •	Przykładowym zadaniem dla e-wolontariusza jest np. pomoc w administrowaniu strony internetowej organizacji pozarządowej lub pisanie tekstów na stronę.
       - title: Gdzie znaleźć przepisy o wolontariacie?
         body: |
           •	Ustawa z dnia 24 kwietnia 2003 r. o działalności pożytku publicznego i o wolontariacie
