--- a/assets/LearnInstructions.yaml
+++ b/assets/LearnInstructions.yaml
@@ -8,6 +8,7 @@ sections:
           •	Pomagając innym pomagamy też samemu sobie – zyskujemy poczucie przynależności, czujemy się potrzebni, odkrywamy swoje mocne strony i umiejętności, uczymy się nowych rzeczy
           •	Dzięki pomaganiu możemy odkryć co chcemy w życiu robić i zyskać niezbędne doświadczenie, które może pomóc w zdobyciu wymarzonej pracy
           •	Pomaganie może pomóc na ścieżce edukacji – bycie wolontariuszem nagradzane jest dodatkowymi punktami w  czasie rekrutacji do liceum – a także ułatwić nam ścieżkę kariery – wiele firm docenia osoby zaangażowane społecznie
+          
           „Dla całego świata możesz być nikim, a dla innych możesz być całym światem” – Antoine de Saint Exupery, ”Mały książę”
           „Bogatym nie jest ten kto posiada, lecz ten, kto daje” – Jan Paweł II
 
@@ -32,22 +33,28 @@ sections:
           •	Wiele fundacji i stowarzyszeń chętnie podejmuje współpracę z wolontariuszami, którzy angażują się w działania wynikające z profilu działalności danej organizacji
           •	Wolontariusze zapraszani są zarówno do współpracy długoterminowej, jak i akcyjnej.
           •	Wykonują bardzo różne zadania, od prostych prac biurowych, organizacyjnych, po udział i współtworzenie kampanii i projektów danej organizacji.
+          
           Wolontariat sportowy
           •	O wolontariacie sportowym mówimy najczęściej przy okazji organizacji zawodów, rozgrywek czy mistrzostw o charakterze sportowym i rekreacyjnym.
           •	Organizatorzy takich wydarzeń często i chętnie korzystają ze wsparcia wolontariuszy, którzy pomagają np. na trasie maratonu, czuwają nad prawidłowym przebiegiem zawodów, wspierają zawodników i kibiców.
           •	Dla miłośników danej dyscypliny sportu to dobra okazja, aby poznać zaplecze organizacyjne dużych imprez sportowych.
+          
           Wolontariat hospicyjny
           •	Z pomocy wolontariuszy korzystają też takie miejsca jak szpitale czy hospicja.
           •	Wolontariusze podejmują w tym przypadku zadania biurowe, pomagają przy organizacji akcji charytatywnych, wspierają personel medyczny, ale też angażują się w zadania wymagające wcześniejszego przeszkolenia tj. pomoc choremu i jego rodzinie.
+          
           Wolontariat szkolny
           •	W wielu szkołach tworzy się szkolne koła wolontariatu, w ramach których chętni uczniowie mogą realizować działania na terenie szkoły na rzecz środowiska szkolnego, jak również zaangażować się w działania poza szkołą, wspierając np. lokalne instytucje czy organizacje pozarządowe.
+          
           Wolontariat pracowniczy
           •	Coraz popularniejsza forma wolontariatu, organizowana i wspierana zwłaszcza przez duże międzynarodowe firmy. Ten rodzaj wolontariatu wpisuje się w społeczną odpowiedzialność biznesu – Corporate Social Responsibility
           •	Pracownicy•wolontariusze dobrowolnie podejmują różne prace na rzecz potrzebujących, a firma wspiera ich w tych działaniach w ramach swoich możliwości finansowych czy organizacyjnych.
+          
           Wolontariat seniorów
           •	Wolontariat seniorów jest dowodem na to, że wolontariuszem można być w każdym wieku.
           •	Wolontariusze-seniorzy chętnie angażują swój wolny czas, dzieląc się wiedzą, umiejętnościami i doświadczeniem.
-          • Wolontariat
+          
+          e-Wolontariat
           •	Szczególnym rodzajem wolontariatu jest wolontariat realizowany wirtualnie, w całości lub częściowo przez Internet.
           •	Wolontariusz w tym przypadku wykonuje swoje zadania zdalnie, z domu czy innego miejsca.
           •	Przykładowym zadaniem dla e-wolontariusza jest np. pomoc w administrowaniu strony internetowej organizacji pozarządowej lub pisanie tekstów na stronę.
@@ -55,6 +62,7 @@ sections:
         body: |
           •	Ustawa z dnia 24 kwietnia 2003 r. o działalności pożytku publicznego i o wolontariacie
           https://isap.sejm.gov.pl/isap.nsf/download.xsp/WDU20030960873/U/D20030873Lj.pdf
+          
           •	Informacje o wolontariacie, interpretacje, wzory dokumentów – Ogólnopolska Sieć Centrów Wolontariatu
           http://wolontariat.org.pl/prawo/ustawa-o-dzialalnosci-pozytku-publicznego-i-o-wolontariacie/
 
@@ -69,6 +77,7 @@ sections:
           •	Informacja o odbyciu wolontariatu powinna znaleźć się na świadectwie szkolnym ukończenia 8 klasy szkoły podstawowej
           •	Wolontariat można odbyć zarówno w szkole jak i poza szkołą • przepisy nie wskazują, aby wpisy na świadectwie miały ograniczać się do wolontariatu organizowanego przez szkołę
           •	Każda szkoła sama określa sposób w jaki muszą zostać udokumentowane działania w wolontariacie.
+          
           Działalność związana z wolontariatem może być dokumentowana w różny sposób, np. przez:
           •	zaświadczenie wydane przez instytucję organizującą wolontariat,
           •	opinię koordynatora, opiekuna koła wolontariatu,
@@ -87,6 +96,7 @@ sections:
             •	zbieranie chętnych do akcji – zbieranie zapisów wolontariuszy
             •	promocja akcji – wysyłka powiadomień do znajomych oraz generowanie ogłoszenia w serwisach społecznościowych typu Facebook
             •	potwierdzanie udziału w akcji przez poszczególnych wolontariuszy (dzięki zastosowaniu nowoczesnej technologii NFC oraz NearByConnection)
+            
             BRANIE UDZIAŁU W AKCJACH WOLONTARIATU
             •	wyszukiwanie akcji społecznych według lokalizacji oraz typu akcji
             •	sprawdzanie informacji o znajomych, którzy również dołączyli do tych akcji
