NearByConnection -> Nearby Connections

--- a/assets/LearnInstructions.yaml
+++ b/assets/LearnInstructions.yaml
@@ -95,7 +95,7 @@ sections:
             •	przygotowywanie ogłoszenia wraz z opisem akcji oraz wymagań wiekowych wolontariuszy
             •	zbieranie chętnych do akcji – zbieranie zapisów wolontariuszy
             •	promocja akcji – wysyłka powiadomień do znajomych oraz generowanie ogłoszenia w serwisach społecznościowych typu Facebook
-            •	potwierdzanie udziału w akcji przez poszczególnych wolontariuszy (dzięki zastosowaniu nowoczesnej technologii NFC oraz NearByConnection)
+            •	potwierdzanie udziału w akcji przez poszczególnych wolontariuszy (dzięki zastosowaniu nowoczesnej technologii NFC oraz Nearby Connections)
             
             BRANIE UDZIAŁU W AKCJACH WOLONTARIATU
             •	wyszukiwanie akcji społecznych według lokalizacji oraz typu akcji
