--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,10 @@ dependencies:
   equatable: ^2.0.5
   yaml: ^3.1.1
   share_plus: ^4.5.3
+  flutter_nearby_connections: ^1.1.1
+  device_info: ^2.0.3
+  nearby_connections: ^3.2.0
+  permission_handler: ^10.1.0
 
 
 dev_dependencies:
