--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   permission_handler: ^10.1.0
   cached_network_image: ^3.2.2
   add_2_calendar: ^2.0.2
+  flutter_launcher_icons: ^0.10.0
 
 
 dev_dependencies:
@@ -123,3 +124,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: false
+  image_path: "assets/IconTransparent.png"
