--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   cached_network_image: ^3.2.2
   add_2_calendar: ^2.0.2
   flutter_launcher_icons: ^0.10.0
+  uni_links: ^0.5.1
 
 
 dev_dependencies:
