--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,8 @@ dependencies:
   add_2_calendar: ^2.0.2
   flutter_launcher_icons: ^0.10.0
   uni_links: ^0.5.1
+  flutter_nfc_kit: ^3.3.1
+  ndef: ^0.3.1
 
 
 dev_dependencies:
