--- a/website/package.json
+++ b/website/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "@supabase/supabase-js": "^2.0.3",
+    "html5-device-mockups": "^3.2.1",
     "roboto-fontface": "*",
     "vue": "^3.2.37",
     "vue-router": "4",
