--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   flutter_launcher_icons: ^0.10.0
   uni_links: ^0.5.1
   nfc_manager: ^3.2.0
+  receive_intent: ^0.2.3
 
 
 dev_dependencies:
