--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   nfc_manager: ^3.2.0
   permission_handler: ^10.2.0
   receive_intent: ^0.2.3
+  flutter_nfc_kit: ^3.3.1
 
 
 dev_dependencies:
