Slightly correct FAQ

--- a/assets/LearnInstructions.yaml
+++ b/assets/LearnInstructions.yaml
@@ -3,11 +3,11 @@ sections:
     children:
       - title: Dlaczego warto pomagać?
         body: |
-          •	Pomoc innym ludziom może sprawić, że świat stanie się lepszym miejscem
-          •	Pomagając zmieniamy swoje otoczenie na lepsze – wspieramy ludzi potrzebujących pomocy, opiekujemy się zwierzętami, troszczymy się o swoje miasto, szkołę, ratujemy przyrodę
-          •	Pomagając innym pomagamy też samemu sobie – zyskujemy poczucie przynależności, czujemy się potrzebni, odkrywamy swoje mocne strony i umiejętności, uczymy się nowych rzeczy
-          •	Dzięki pomaganiu możemy odkryć co chcemy w życiu robić i zyskać niezbędne doświadczenie, które może pomóc w zdobyciu wymarzonej pracy
-          •	Pomaganie może pomóc na ścieżce edukacji – bycie wolontariuszem nagradzane jest dodatkowymi punktami w  czasie rekrutacji do liceum – a także ułatwić nam ścieżkę kariery – wiele firm docenia osoby zaangażowane społecznie
+          •	Pomoc innym ludziom może sprawić, że świat stanie się lepszym miejscem.
+          •	Pomagając, zmieniamy swoje otoczenie na lepsze – wspieramy ludzi potrzebujących pomocy, opiekujemy się zwierzętami, troszczymy się o swoje miasto, szkołę, ratujemy przyrodę.
+          •	Pomagając innym, pomagamy też samemu sobie – zyskujemy poczucie przynależności, czujemy się potrzebni, odkrywamy swoje mocne strony i umiejętności, uczymy się nowych rzeczy.
+          •	Dzięki pomaganiu, możemy odkryć, co chcemy w życiu robić i zyskać niezbędne doświadczenie, które może pomóc w zdobyciu wymarzonej pracy.
+          •	Pomaganie może pomóc na ścieżce edukacji – bycie wolontariuszem nagradzane jest dodatkowymi punktami w czasie rekrutacji do liceum – a także ułatwić nam ścieżkę kariery – wiele firm docenia osoby zaangażowane społecznie.
           
           „Dla całego świata możesz być nikim, a dla innych możesz być całym światem” – Antoine de Saint Exupery, ”Mały książę”
           „Bogatym nie jest ten kto posiada, lecz ten, kto daje” – Jan Paweł II
@@ -15,22 +15,22 @@ sections:
       - title:  Jak pomagać?
         body: | 
           •	Pomoc to nie tylko wsparcie materialne, ale też pomaganie czynem i słowem.
-          •	Pomoc może być drobna i nie kosztować wiele wysiłku – tak jak zrobienie zakupów starszej osobie, a może też wymagać dużego zaangażowania  – jak bycie wolontariuszem w schronisku dla zwierząt i poświęcanie czasu co tydzień
-          •	Każda pomoc się liczy! Nawet niewielki akt dobroci może komuś dać radość i ułatwić życie
-          •	Pomagać trzeba mądrze – obserwować swoje otoczenie i uważnie słuchać, rozmawiać z sąsiadami, znajomymi oraz skierować się do organizacji, które wiedzą komu i jak pomagać
-          •	Najlepiej pomagać w tym zakresie, w którym czujemy się dobrze oraz gdzie nasze umiejętności mogą się najbardziej przydać – znasz się na komputerach? Może pomożesz seniorom ustawić sobie telefon lub przestrzec przed nadużyciami w sieci internetowej? Lubisz przyrodę? Może wesprzesz akcję sprzątania dzielnicy. Trenujesz na siłowni? Może pomożesz w przeprowadzce? Ludzie Cię słuchają? Może zostaniesz liderem i sam zorganizujesz akcję pomocy?
+          •	Pomoc może być drobna i nie kosztować wiele wysiłku – tak jak zrobienie zakupów starszej osobie, ale może też wymagać dużego zaangażowania  – jak bycie wolontariuszem w schronisku dla zwierząt i poświęcanie czasu co tydzień.
+          •	Każda pomoc się liczy! Nawet niewielki akt dobroci może komuś dać radość i ułatwić życie.
+          •	Pomagać trzeba mądrze – obserwować swoje otoczenie i uważnie słuchać, rozmawiać z sąsiadami, znajomymi oraz skierować się do organizacji, które wiedzą komu i jak pomagać.
+          •	Najlepiej pomagać w tym zakresie, w którym czujemy się dobrze oraz gdzie nasze umiejętności mogą się najbardziej przydać – znasz się na komputerach? Może pomożesz seniorom skonfigurować sobie telefon lub przestrzec przed nadużyciami w sieci? Lubisz przyrodę? Może wesprzesz akcję sprzątania dzielnicy. Trenujesz na siłowni? Może pomożesz w przeprowadzce? Ludzie Cię słuchają? Może zostaniesz liderem i sam zorganizujesz akcję pomocy?
 
       - title: Czym jest wolontariat?
         body: |
-          •	Słowo wolontariat pochodzi z łaciny – od słowa voluntarius czyli dobrowolny
-          •	Wolontariat to świadoma, dobrowolna działalność podejmowaną na rzecz innych, wykraczającą poza więzy rodzinno•koleżeńsko•przyjacielskie
-          •	Wolontariuszem jest ten, kto dobrowolnie i świadomie oraz bez wynagrodzenia angażuje się w pracę na rzecz osób, organizacji pozarządowych, a także rozmaitych instytucji działających w różnych obszarach społecznych
-          •	Każdego roku w dniu 5 grudnia obchodzony jest Międzynarodowy Dzień Wolontariusza
+          •	Słowo wolontariat pochodzi z łaciny – od słowa voluntarius czyli dobrowolny.
+          •	Wolontariat to świadoma, dobrowolna działalność podejmowaną na rzecz innych, wykraczającą poza więzy rodzinno•koleżeńsko•przyjacielskie.
+          •	Wolontariuszem jest ten, kto dobrowolnie i świadomie oraz bez wynagrodzenia angażuje się w pracę na rzecz osób, organizacji pozarządowych, a także rozmaitych instytucji działających w różnych obszarach społecznych.
+          •	Każdego roku w dniu 5 grudnia obchodzony jest Międzynarodowy Dzień Wolontariusza.
 
       - title: Jakie są rodzaje wolontariatu?
         body: |
           Wolontariat w organizacjach pozarządowych
-          •	Wiele fundacji i stowarzyszeń chętnie podejmuje współpracę z wolontariuszami, którzy angażują się w działania wynikające z profilu działalności danej organizacji
+          •	Wiele fundacji i stowarzyszeń chętnie podejmuje współpracę z wolontariuszami, którzy angażują się w działania wynikające z profilu działalności danej organizacji.
           •	Wolontariusze zapraszani są zarówno do współpracy długoterminowej, jak i akcyjnej.
           •	Wykonują bardzo różne zadania, od prostych prac biurowych, organizacyjnych, po udział i współtworzenie kampanii i projektów danej organizacji.
           
@@ -69,14 +69,14 @@ sections:
 
       - title:  W jakim wieku można zostać wolontariuszem?
         body: |
-          •	Wolontariuszem może zostać każdy bez względu na swój wiek. Jednak niektóre formy wolontariatu wymagają od wolontariusza pełnoletności. Więcej informacji http://wolontariat.org.pl/wolontariusze/czy-moj-wiek-jest-istotny/
+          •	Wolontariuszem może zostać każdy bez względu na swój wiek. Jednak niektóre specyficzne formy wolontariatu wymagają od wolontariusza pełnoletności. Więcej informacji http://wolontariat.org.pl/wolontariusze/czy-moj-wiek-jest-istotny/
 
       - title: Jak zyskać punkty za wolontariat podczas rekrutacji do liceum?
         body: |
           Wolontariat pozwala uzyskać dodatkowe 3 punkty podczas rekrutacji do liceum – co może mieć istotny wpływ na dostanie się do wymarzonej klasy.
-          •	Informacja o odbyciu wolontariatu powinna znaleźć się na świadectwie szkolnym ukończenia 8 klasy szkoły podstawowej
-          •	Wolontariat można odbyć zarówno w szkole jak i poza szkołą • przepisy nie wskazują, aby wpisy na świadectwie miały ograniczać się do wolontariatu organizowanego przez szkołę
-          •	Każda szkoła sama określa sposób w jaki muszą zostać udokumentowane działania w wolontariacie.
+          •	Informacja o odbyciu wolontariatu powinna znaleźć się na świadectwie szkolnym ukończenia 8 klasy szkoły podstawowej.
+          •	Wolontariat można odbyć zarówno w szkole jak i poza szkołą • przepisy nie wskazują, aby wpisy na świadectwie miały ograniczać się do wolontariatu organizowanego przez szkołę.
+          •	Każda szkoła sama określa sposób, w jaki muszą zostać udokumentowane działania w wolontariacie.
           
           Działalność związana z wolontariatem może być dokumentowana w różny sposób, np. przez:
           •	zaświadczenie wydane przez instytucję organizującą wolontariat,
@@ -105,26 +105,24 @@ sections:
             •	sprawdzanie rankingów najlepszych wolontariuszy
       - title: Jak zorganizować akcję pomocy?
         body: | 
-            1.	Kliknij przycisk „Nowe wydarzenie” znajdujący się w prawym dolnym rogu
-            2.	Wypełnij dane wydarzenia: Nazwę, opis, miejsce, lokalizację, wymagany wiek i ilość wolontariuszy oraz Punkty Pomocy, które dostaną za uczestnictwo
-            3.	Opcjonalnie dodaj swój adres e-mail oraz zdjęcie do wydarzenia
-            4.	Wciśnij „Opublikuj”
+            1.	Kliknij przycisk „Nowe wydarzenie” znajdujący się w prawym dolnym rogu.
+            2.	Wypełnij dane wydarzenia: Nazwę, opis, miejsce, lokalizację, wymagany wiek i ilość wolontariuszy oraz Punkty Pomocy, które dostaną za uczestnictwo.
+            3.	Opcjonalnie dodaj swój adres e-mail oraz zdjęcie do wydarzenia.
+            4.	Wciśnij „Opublikuj”.
             Brawo! Twoja akcja wyczekuje na uczestników!
       - title: Jak wziąć udział w akcji pomocy?
         body: |
-            1.	Wybierz akcję w której chcesz uczestniczyć i kliknij na nią
-            2.	Jeżeli nie spełniasz wymagań wiekowych pojawi się komunikat
-            3.	Sprawdź czy data oraz lokalizacja ci odpowiadają
-            4.	Kliknij „Dołącz” w prawym dobrym rogu
-            5.	Weź udział w wydarzeniu w podanym miejscu i czasie
-            6.	Zeskanuj plakietkę NFC organizatora, aby odebrać swoje Punkty Pomocy
+            1.	Wybierz akcję, w której chcesz uczestniczyć i kliknij na nią.
+            2.	Jeżeli nie spełniasz wymagań wiekowych, pojawi się komunikat.
+            3.	Sprawdź, czy data oraz lokalizacja ci odpowiadają.
+            4.	Kliknij „Dołącz” w prawym dobrym rogu.
+            5.	Weź udział w wydarzeniu w podanym miejscu i czasie.
+            6.	Zeskanuj plakietkę NFC organizatora, aby odebrać swoje Punkty Pomocy.
       - title: Czym są Punkty Pomocy?
         body: |
-                •	Punkty pomocy otrzymują wolontariusze za udział w wydarzeniu
-                •	Organizator wydarzenia sam określa ilość punktów, jaką przydziela wolontariuszom za udział
-                •	Dzięki punktom pomagacze otrzymują lepsze miejsca w rankingach
-                •	Punkty można wymienić na nagrody u partnerów aplikacji Pomagacze (aktualnie szukamy partnerów)
-
+                •	Punkty pomocy otrzymują wolontariusze za udział w wydarzeniu.
+                •	Organizator wydarzenia sam określa ilość punktów, jaką przydziela wolontariuszom za udział.
+                •	Dzięki punktom pomagacze otrzymują lepsze miejsca w rankingach.
 
 
 
