--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,7 +73,8 @@ dependencies:
   permission_handler: ^10.2.0
   receive_intent: ^0.2.3
   flutter_nfc_kit: ^3.3.1
-  dots_indicator: ^2.1.0
+  shared_preferences: ^2.0.15
+  smooth_page_indicator: ^1.0.0+2
 
 
 dev_dependencies:
@@ -101,9 +102,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    - assets/loginBGgren.png
-    - assets/LearnInstructions.yaml
-    - assets/Onboarding.yaml
+    - assets/loginBg.png
+    - assets/learnInstructions.yaml
+    - assets/onboarding.yaml
+    - assets/iconTransparent.png
+    - assets/onboarding_icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -134,4 +137,4 @@ flutter:
 flutter_icons:
   android: "launcher_icon"
   ios: false
-  image_path: "assets/IconTransparent.png"
+  image_path: "assets/iconTransparent.png"
