--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   flutter_nfc_kit: ^3.3.1
   shared_preferences: ^2.0.15
   smooth_page_indicator: ^1.0.0+2
+  url_launcher: ^6.1.6
 
 
 dev_dependencies:
